# IndiflightHIL

./: .gitignore  .gitmodules  Makefile  README.md
gz-plugins/indiflight/: CMakeLists.txt  Indiflight.cc  Indiflight.hh
gz-plugins/multicopter_motor_model_TB/: CMakeLists.txt  MulticopterMotorModelTB.cc  MulticopterMotorModelTB.hh
models/: createModel.py  randomizeModel.py
models/5inch/: model.config  model.sdf
models/CineRat/: model.config  model.sdf
models/x500/: model.sdf
worlds/: cyberzoo.sdf  default.sdf
